# televault

./: .env.example  .gitattributes  .gitignore  GlideDrive.spec  LICENSE  README.md  SETUP.txt  TG_Cloud_Cache_Manager.spec  TeleVault.spec  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
app/: main.py
app/api/: __init__.py  common.py  server.py  shares.py
app/config/: config.py  defaults.py
app/core/: accounts.py  cache.py  i18n.py  jobs.py  logging.py  object_state.py  paths.py  proxy.py  rate_limiter.py  sharing.py  stream.py  transcode.py  transfer_progress.py  types.py  utils.py  worker.py
app/db/: database.py  models.py
app/i18n/: en_US.ts  ru_RU.qm  ru_RU.ts  uk_UA.qm  uk_UA.ts
app/tg/: adaptive.py  blob_recovery.py  client.py  compression.py  parser.py  partition.py  proxy_escalation.py  scan.py
app/ui/: job_toasts.py  media_viewer.py  theme.py  widgets.py  window_main.py
docs/: ARCHITECTURE.md  REFACTOR_PLAN.md  REST_API.md  ROADMAP_features.md
scripts/: auth_session.py  build.bat  build.sh  compile_translations.sh  manage_accounts.py  update_translations.sh
scripts/debug/: lookup_file.py
src/televault/: __main__.py  main.py
tests/: conftest.py
tests/integration_mock/: test_scan_mock.py  test_upload_download_mock.py
tests/unit/: test_account_load_balancer.py  test_accounts.py  test_accounts_dialog.py  test_add_account_dialog.py  test_api_server.py  test_bandwidth_limiter.py  test_blob_recovery.py  test_cache.py  test_cache_full.py  test_code_highlighter.py  test_config.py  test_config_full.py  test_container_sniff.py  test_delete.py  test_explorer_delegate.py  test_file_properties_dialog.py  test_folder_sync.py  test_folder_tree_model.py  test_invite_hash.py  test_jobs.py  test_jobs_full.py  test_mtproxy.py  test_object_state.py  test_parser.py  test_pdf_viewer.py  test_proxy_escalation_midsession.py  test_proxy_fallback.py  test_rate_and_progress_full.py  test_repo.py  (+24 more)
(+128 files in other folders)
