[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "televault"
version = "0.1.0"
description = "TeleVault — desktop cloud storage backed by Telegram"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "PySide6>=6.8,<7.0",
  "qtawesome>=1.4,<2.0",
  "Telethon>=1.36,<2.0",
  "python-socks>=2.8,<3.0",
  "aiofiles>=24.1,<25.0",
  "tenacity>=9.0,<10.0",
  "python-dotenv>=1.0,<2.0",
  "cryptography>=44.0,<46.0",
  "psutil>=5.9,<7.0",
  "cryptg>=0.6.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0,<9.0",
  "pytest-asyncio>=0.23,<1.0",
  "pyinstaller>=6.4",
  "ruff>=0.8,<1.0"
]

[project.scripts]
televault = "televault.main:run"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.setuptools.packages.find]
where = ["src"]
include = ["televault*"]

[tool.setuptools.package-data]
televault = ["assets/*", "i18n/*.qm"]
